Customer id gives enough information

--- a/resources/views/customer/customer-index.twig
+++ b/resources/views/customer/customer-index.twig
@@ -12,7 +12,7 @@
                 </h2>
             </caption>
             <tr>
-                <th scope=col aria-label="Customer id column header">#</th>
+                <th scope=col aria-label="Customer id">#</th>
                 <th scope=col>Company name</th>
                 <th scope=col>Contact name</th>
             </tr>
