Add some description for the lists counters (accessibility feature again)

--- a/resources/views/customer/customer-index.twig
+++ b/resources/views/customer/customer-index.twig
@@ -6,7 +6,7 @@
             <caption>
                 <h2>
                     Customers
-                    <span class="badge">
+                    <span class="badge" aria-label="Customer count">
                         {{ customersTotal }}
                     </span>
                 </h2>
