Back and cancel buttons redirect to customers index. Correct some language flaws.

--- a/resources/views/customer/customer-create.twig
+++ b/resources/views/customer/customer-create.twig
@@ -104,7 +104,7 @@
             {% else %}
                 <button type="submit" class="btn btn-primary">Update</button>
             {% endif %}
-                <a href="{{ url_previous() }}" class="btn btn-default">Back</a>
+                <a href="{{ route('customer.index') }}" class="btn btn-default">Cancel</a>
         </div>
     </div>
 </form>
