--- a/resources/views/customer/customer-show.twig
+++ b/resources/views/customer/customer-show.twig
@@ -2,97 +2,46 @@
 
 {% block body %}
 <h1>{{ customer.company_name }}</h1>
-<form class="form-horizontal">
+<div class="container">
     <div class="row">
-        <label class="control-label col-xs-8 col-sm-2">
-            VAT number
-        </label>
-        <div class="col-xs-4 col-sm-2">
-            <p class="form-control-static">
-                {{ customer.vat }}
-            </p>
-        </div>
+        <p class="col-xs-8 col-sm-8">
+            <b>VAT number</b> {{ customer.vat }}
+        </p>
     </div>
-    <fieldset>
-        <legend>Contact person</legend>
-        <div class="row">
-            <label class="control-label col-xs-8 col-sm-2">
-                Contact name
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.last_name }} {{ customer.first_name }}
-                </p>
-            </div>
-            <label class="control-label col-xs-8 col-sm-2">
-                Department
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.department }}
-                </p>
-            </div>
-            <label class="control-label col-sm-1 col-md-1">
-                Email
-            </label>
-            <div class="col-sm-2 col-md-2">
-                <p class="form-control-static">
-                    <a href="mailto:{{ customer.email }}">
-                        {{ customer.email }}
-                    </a>
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <label class="control-label col-xs-8 col-sm-2">
-                Phone number
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.phone_number }}
-                </p>
-            </div>
-            <label class="control-label col-xs-8 col-sm-2">
-                Fax number
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.fax_number }}
-                </p>
-            </div>
-        </div>
-    </fieldset>
-    <fieldset>
-        <legend>Address</legend>
-        <div class="row">
-            <label class="control-label col-xs-8 col-sm-2">
-                Street
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.street_name }} {{ customer.building_number }}
-                </p>
-            </div>
-            <label class="control-label col-xs-8 col-sm-2">
-                City
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.city }}
-                </p>
-            </div>
-            <label class="control-label col-xs-8 col-sm-2">
-                Country
-            </label>
-            <div class="col-xs-4 col-sm-2">
-                <p class="form-control-static">
-                    {{ customer.country_name }}
-                </p>
-            </div>
-        </div>
-    </fieldset>
-    <a href="{{ route('customer.edit', [customer]) }}" class="btn btn-default">Edit</a>
-    {# <a href="{{ route('customer.destroy', {customer: customer.slug}) }}" class="btn btn-danger">Delete</a> #}
-    <a href="{{ route('customer.index') }}" class="btn btn-default">Back</a>
-</form>
+    <div class="row">
+        <h2>Contact person</h2>
+        <p class="col-xs-8 col-sm-3">
+            <b>Contact name</b> {{ customer.last_name }} {{ customer.first_name }}
+        </p>
+        <p class="col-xs-8 col-sm-3">
+            <b>Department</b> {{ customer.department }}
+        </p>
+        <p class="col-sm-8 col-md-5">
+            <b>Email</b> <a href="mailto:{{ customer.email }}">{{ customer.email }}</a>
+        </p>
+    </div>
+    <div class="row">
+        <p class="col-xs-8 col-sm-3">
+            <b>Phone number</b> {{ customer.phone_number }}
+        </p>
+        <p class="col-xs-8 col-sm-3">
+            <b>Fax number</b> {{ customer.fax_number }}
+        </p>
+    </div>
+    <div class="row">
+        <h2>Address</h2>
+        <p class="col-xs-8 col-sm-3">
+            <b>Street</b> {{ customer.street_name }} {{ customer.building_number }}
+        </p>
+        <p class="col-xs-8 col-sm-3">
+            <b>City</b> {{ customer.city }}
+        </p>
+        <p class="col-xs-8 col-sm-3">
+            <b>Country</b> {{ customer.country_name }}
+        </p>
+    </div>
+</div>
+<a href="{{ route('customer.edit', [customer]) }}" class="btn btn-default">Edit</a>
+{# <a href="{{ route('customer.destroy', {customer: customer.slug}) }}" class="btn btn-danger">Delete</a> #}
+<a href="{{ route('customer.index') }}" class="btn btn-default">Back</a>
 {% endblock %}
