Setup a little bigger font size to facilitate reading

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -42,6 +42,8 @@ $thumbnail-bg: $primary-color;
 /* Buttons */
 $btn-danger-bg: #D32F2F;
 
+$font-size-base: 18px;
+
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
