Add accessibility to the product type counts

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5803,6 +5803,15 @@ button.close {
   height: 45px;
   font-size: 16px; }
 
+/* Accessibility */
+.accessible_elem {
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px; }
+
 /* For small screens */
 @media (min-width: 772px) {
   ul.nav li.dropdown:hover > ul.dropdown-menu {
