--- a/resources/views/inventory.twig
+++ b/resources/views/inventory.twig
@@ -10,6 +10,7 @@
                     {{ type.name }}
                     <span class="badge" aria-label="product quantity">
                         {{ type.product_count }}
+                         <i class=accessible_elem>products of type {{ type.name }}</i>
                     </span>
                 </h2>
             </caption>
