Add accessibility to some tables

--- a/resources/views/customer/customer-index.twig
+++ b/resources/views/customer/customer-index.twig
@@ -7,7 +7,7 @@
                 <h2>
                     Customers
                     <span class="badge" aria-label="Customer count">
-                        {{ customersTotal }}
+                        {{ customersTotal }} <i class=accessible_elem>customers</i>
                     </span>
                 </h2>
             </caption>
