--- a/resources/views/inventory.twig
+++ b/resources/views/inventory.twig
@@ -9,8 +9,7 @@
                 <h2>
                     {{ type.name }}
                     <span class="badge">
-                        {{ type.product_count }}
-                         <i class=accessible_elem>products of type {{ type.name }}</i>
+                        {{ type.product_count }} <i class=accessible_elem>products of type {{ type.name }}</i>
                     </span>
                 </h2>
             </caption>
