--- a/resources/views/inventory/inventory-show.twig
+++ b/resources/views/inventory/inventory-show.twig
@@ -8,7 +8,7 @@
                 <h2>
                     {{ type.name }}
                     <span class="badge">
-                        {{ total }}
+                        {{ total }} <i class=accessible_elem>products</i>
                     </span>
                 </h2>
                 <p>
