Fixed Customer - Country relation

--- a/resources/views/customer/customer-show.twig
+++ b/resources/views/customer/customer-show.twig
@@ -37,7 +37,7 @@
             <b>City</b> {{ customer.city }}
         </p>
         <p class="col-xs-8 col-sm-3">
-            <b>Country</b> {{ customer.country_name }}
+            <b>Country</b> {{ customer.country.name }}
         </p>
     </div>
 </div>
