--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -95,6 +95,27 @@ $font-size-base: 18px;
     background-color: $gray-lighter;
 }
 
+/* Typeahead */
+.tt-dataset-suggestions {
+    background-color: #fff;
+}
+
+.tt-suggestion {
+    padding: 3px 20px;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+.tt-suggestion.tt-is-under-cursor { /* UPDATE: newer versions use .tt-suggestion.tt-cursor */
+    color: #fff;
+    background-color: #0097cf;
+
+}
+
+.tt-suggestion p {
+    margin: 0;
+}
+
 
 /* For small screens */
 @media (min-width: 772px) {
