--- a/resources/views/inventory/inventory-update.twig
+++ b/resources/views/inventory/inventory-update.twig
@@ -5,7 +5,7 @@
         Insert a valid serial number to put the concerned lense into
         the on hands inventory.
     </p>
-    <form action="{{ route('product.update', {inventory: inventory}) }}" method="post">
+    <form action="{{ route('inventory.update', {inventory: inventory}) }}" method="post">
         {{ csrf_field() }}
         <input name="_method" type="hidden" value="put">
         <div class="form-group row">
