--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -22,11 +22,11 @@
                             Inventory<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ route('product.index', ['on-hands']) }}">On Hands Inventory</a></li>
-                            <li><a href="{{ route('product.index', ['consignment']) }}">Consignment Inventory</a></li>
-                            <li><a href="{{ route('product.index', ['sales']) }}">Sales</a></li>
-                            <li><a href="{{ route('product.edit', ['internal']) }}">Move to Packship</a></li>
-                            <li><a href="{{ route('product.edit', ['remote']) }}">Update a product's status</a></li>
+                            <li><a href="{{ route('inventory.index', ['on-hands']) }}">On Hands Inventory</a></li>
+                            <li><a href="{{ route('inventory.index', ['consignment']) }}">Consignment Inventory</a></li>
+                            <li><a href="{{ route('inventory.index', ['sales']) }}">Sales</a></li>
+                            <li><a href="{{ route('inventory.edit', ['internal']) }}">Move to Packship</a></li>
+                            <li><a href="{{ route('inventory.edit', ['remote']) }}">Update a product's status</a></li>
                         </ul>
                     </li>
                     <li role="presentation" class="dropdown">
