--- a/resources/views/inventory/inventory-show.twig
+++ b/resources/views/inventory/inventory-show.twig
@@ -6,7 +6,7 @@
         <table class ="table table-striped" >
             <caption>
                 <h2>
-                    {{ type.name }}
+                    {{ productType.name }}
                     <span class="badge">
                         {{ total }} <i class=accessible_elem>products</i>
                     </span>
