Create order page with dynamic form using JSX. Code can be cleaner.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7768,6 +7768,10 @@ button.close {
   margin: 0;
 }
 
+.diopter-row {
+  margin-bottom: 15px;
+}
+
 /* For small screens */
 @media (min-width: 772px) {
   ul.nav li.dropdown:hover > ul.dropdown-menu {
