Implemented orders index

--- a/resources/views/navigation-bar.twig
+++ b/resources/views/navigation-bar.twig
@@ -35,6 +35,15 @@
                             <li><a href="{{ route('customer.create')}}">New customer</a></li>
                         </ul>
                     </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Orders <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ route('order.index', ['opened'] )}}">Show orders</a></li>
+                            <li><a href="{{ route('order.create')}}">New order</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
