Improved accessibility and created show view for orders

--- a/resources/views/order/index.twig
+++ b/resources/views/order/index.twig
@@ -31,7 +31,7 @@
                 data-href="{{ route('order.show', [o]) }}">
                 <td>
                     <a href="{{ route('order.show', [o]) }}">
-                        {{ o.id }}
+                        {{ o.formattedId }}
                     </a>
                 </td>
                 <td>{{ o.customer.company_name }}</td>
