--- a/resources/views/order/show.twig
+++ b/resources/views/order/show.twig
@@ -24,6 +24,7 @@
                 </p>
             {% endif %}
         </div>
+        <a href="{{ route('order.edit', order) }}" class="btn btn-default">Edit</a>
     </div>
     <h2>Order elements</h2>
     <div class="container">
