--- a/resources/views/order/show.twig
+++ b/resources/views/order/show.twig
@@ -3,28 +3,11 @@
 {% block body %}
     <h1>{{ order.formattedId }}</h1>
     <div class="container">
-        <div class="row">
-            <p class="col-xs-6 col-sm-6">
-                <b>Customer</b>
-                <a href="{{ route('customer.show', order.customer) }}">
-                    {{ order.customer.company_name }}
-                </a>
-            </p>
-        </div>
-        <div class="row">
-            <p class="col-xs-3 col-sm-3">
-                <b>Type</b> {{ order.orderType.name }}
-            </p>
-            <p class="col-xs-3 col-sm-3">
-                <b>Status</b> {{ order.orderStatus.name }}
-            </p>
-            {% if order.requested_at is not null %}
-                <p class="col-xs-6 col-sm-6">
-                    <b>Requested shipping date</b>{{ order.requested_at }}
-                </p>
-            {% endif %}
-        </div>
+        {% include "order/infos.twig" %}
         <a href="{{ route('order.edit', order) }}" class="btn btn-default">Edit</a>
+        {% if order.orderStatus.name == 'opened' %}
+        <a href="{{ route('order.shipping', order) }}" class="btn btn-default">Ship</a>
+        {% endif %}
     </div>
     <h2>Order elements</h2>
     <div class="container">
