Yes... It's Jon Snow

--- a/resources/views/order/ship.twig
+++ b/resources/views/order/ship.twig
@@ -24,7 +24,7 @@
             <label class="col-form-label col-xs-2" for="delivered_by">Delivered by</label>
             <div class="col-xs-6">
                 <input class="awb-input" type="text" name="delivered_by" value=""
-                    placeholder="eg: John Snow"
+                    placeholder="eg: Jon Snow"
                 >
             </div>
         </div>
