Fixed ship view issues using the correct attributes

--- a/resources/views/order/ship.twig
+++ b/resources/views/order/ship.twig
@@ -9,7 +9,7 @@
         order by your own mean. <strong>Airway Bill</strong> field can be let
         empty then.
     </p>
-    <form action="{{ route('order.ship', order) }}" method="post">
+    <form action="" method="post">
         {{ method_field('PUT') }}
         {{ csrf_field() }}
         <div class="form-group row">
